@@ -12,6 +12,10 @@ ENHANCEMENTS
  * #277: added a make file for running tests and for other repetitive tasks
          (also for Windows).
 
+BUG FIXES
+
+ * #261: (FTPS) SSL shutdown does not properly work on Windows.
+
 
 Version: 1.3.0 - Date: 2013-11-07
 ---------------------------------
